--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body, html { width: 100%; height: 100%; margin: 0; padding: 0; overflow-x: hidden; }
-a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color: transparent; text-decoration: none; }
+a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,0,0); text-decoration: none; color: #666; }
 
 /*首页 start*/
 .container { display: -webkit-flex; /* Safari */ display: flex; flex-direction: column;	/*justify-content: center;*/ align-items: center; height: calc(100% - 50px); background-image: url('../img/index-bg.jpg'); background-size: 100%; font-size: 16rem; padding-top: 50px; }
@@ -9,9 +9,54 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color: transpar
 .menu_body a { background-color: #974940; display: block; width: 100%; margin: 10px auto; }
 .menu_body a:first-child { margin-top: 0; background-color: transparent; }
 .menu_body a:last-child { margin-bottom: 0; }
-.menu_body a p { margin: 0; padding: 5px 0; color: #fff; text-align: center; font-size: 12rem; }
-.menu_body a p:first-child { font-size: 16rem; }
+.menu_body a p { margin: 0; padding: 0 0 10px; color: #fff; text-align: center; font-size: 12rem; }
+.menu_body a p:first-child { font-size: 18rem; padding: 10px 0 0; }
 /*首页 end*/
 
+/*商城主页 start*/
+.shop_list { margin-top: 50px; }
+.shop_list>p { text-align: center; color: #666; font-size: 16rem; margin: 5px 0; }
+/*标题*/
+.nav { width: 100%; height: 50px; position: fixed; top: 0; z-index: 99; text-align: center; background-color: #dabfae; }
+.nav .go_back { position: absolute; display: block; top: 18px; left: 20px; height: 13px; width: 13px; border-left: 2px solid #000; border-bottom: 2px solid #000; transform: rotate(45deg); }
+.nav p { height: 50px; line-height: 50px; margin: 0; font-size: 20rem; padding: 5px auto; }
 
+/*搜索*/
+.search { position: relative; height: 40px; width: 100%; }
+.search input { height: 30px; width: calc(100% - 60px); outline: none; -webkit-appearance: none; border: none; border-bottom: 1px solid #ccc; padding: 5px 60px 5px 10px; }
+.search img { position: absolute; width: 25px; top: 8px; right: 18px; }
+
+/*轮播图*/
+.swiper-container { width: calc(100% - 10px); margin: 5px; overflow: hidden; }
+.swiper-slide img { width: 100%; }
+.swiper-container .swiper-pagination { text-align: right }
+.swiper-container .swiper-pagination-bullet { width: 6px; height: 6px; border-radius: 0; }
+.swiper-container .swiper-pagination-bullet-active { background: #a9856d; }
+
+/*分类*/
+.classify { font-size: 0; }
+.classify a { height: 70px; margin: 5px; position: relative; display: inline-block; width: calc(50% - 10px); background-color: no-repeat; background-size: cover; }
+.classify a div { width: 40%; float: right; }
+.classify a p { margin: 0px; font-size: 14rem; color: #000; }
+.classify a p:first-child { font-size: 18rem; margin-top: 15px }
+.class_wine { background-image: url('../img/shop_list_02.jpg'); }
+.class_tools { background-image: url('../img/shop_list_03.jpg'); }
+
+/*产品介绍*/
+.product_list { display: -webkit-flex; /* Safari */ display: flex; flex-wrap: wrap; font-size: 0; margin-bottom: 60px; }
+.product { width: calc(50% - 10px); margin: 5px; display: inline-block; }
+.product img { width: 100%; }
+.product_name { background-color: #333; color: #fff; padding: 5px 10px; font-size: 10rem; margin: 0; overflow: hidden; }
+.product_intro { width: calc(100% - 20px); padding: 10px; background-color: #f2f2f2; }
+.product_intro p:first-child { font-size: 10px; margin: 0 0 10px; }
+.product_intro p:first-child span { border: 1px solid #333; padding: 1px 5px; border-radius: 3px; margin-right: 5px; }
+.product_intro p:last-child { position: relative; font-size: 12rem; margin: 10px 0 0; }
+.price { font-size: 16rem; }
+.cart { display: block; width: 20px; height: 20px; position: absolute; top: 0; right: 5px; background-image: url(../img/shopping_cart.png); background-size: 100%; }
+/*商城主页 end*/
+
+/*导航栏 start*/
+.nav_list { position: fixed; bottom: 0; width: 100%; height: 50px; display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; background-color: #fff; box-shadow: 0 -1px 1px rgba(51, 51, 51, .2); }
+.nav_list a { font-size: 18rem; display: inline-block; width: 100%; line-height: 50px; text-align: center; }
+/*导航栏 end*/
 
