--- a/css/index.css
+++ b/css/index.css
@@ -60,3 +60,12 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 .nav_list a { font-size: 18rem; display: inline-block; width: 100%; line-height: 50px; text-align: center; }
 /*导航栏 end*/
 
+/*产品列表 start*/
+.nav_search { display: block; width: 20px; height: 20px; position: absolute; right: 20px; top: 15px; background-image: url('../img/search_black.png'); background-size: 100%; }
+.classify_nav { display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; background-color: #fff; box-shadow: 0 1px 1px rgba(51, 51, 51, .2); }
+.classify_nav a { font-size: 16rem; display: inline-block; width: 100%; line-height: 50px; text-align: center; }
+/*产品列表 end*/
+
+
+
+
