--- a/css/index.css
+++ b/css/index.css
@@ -28,7 +28,8 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 
 /*轮播图*/
 .swiper-container { width: calc(100% - 10px); margin: 5px; overflow: hidden; }
-.swiper-slide img { width: 100%; }
+.swiper-slide a { display: block; width: 100%; height: 100%; }
+.swiper-slide img { width: 100%; height: 100%; }
 .swiper-container .swiper-pagination { text-align: right }
 .swiper-container .swiper-pagination-bullet { width: 6px; height: 6px; border-radius: 0; }
 .swiper-container .swiper-pagination-bullet-active { background: #a9856d; }
@@ -45,11 +46,12 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 /*产品介绍*/
 .product_list { display: -webkit-flex; /* Safari */ display: flex; flex-wrap: wrap; font-size: 0; margin-bottom: 60px; }
 .product { width: calc(50% - 10px); margin: 5px; display: inline-block; }
+.product>a { width: 100%; height: 100%; }
 .product img { width: 100%; }
 .product_name { background-color: #333; color: #fff; padding: 5px 10px; font-size: 10rem; margin: 0; overflow: hidden; }
 .product_intro { width: calc(100% - 20px); padding: 10px; background-color: #f2f2f2; }
-.product_intro p:first-child { font-size: 10px; margin: 0 0 10px; }
-.product_intro p:first-child span { border: 1px solid #333; padding: 1px 5px; border-radius: 3px; margin-right: 5px; }
+.product_intro .tab { font-size: 10px; margin: 0 0 10px; }
+.product_intro .tab span { border: 1px solid #333; padding: 1px 5px; border-radius: 3px; margin-right: 5px; }
 .product_intro p:last-child { position: relative; font-size: 12rem; margin: 10px 0 0; }
 .price { font-size: 16rem; }
 .cart { display: block; width: 20px; height: 20px; position: absolute; top: 0; right: 5px; background-image: url(../img/shopping_cart.png); background-size: 100%; }
@@ -58,14 +60,25 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 /*导航栏 start*/
 .nav_list { position: fixed; bottom: 0; width: 100%; height: 50px; display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; background-color: #fff; box-shadow: 0 -1px 1px rgba(51, 51, 51, .2); }
 .nav_list a { font-size: 18rem; display: inline-block; width: 100%; line-height: 50px; text-align: center; }
+.nav_list a.active { color: #d9bfad; -webkit-transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -ms-transition: all .25s ease-in-out; -o-transition: all .25s ease-in-out; transition: all .25s ease-in-out; }
 /*导航栏 end*/
 
 /*产品列表 start*/
 .nav_search { display: block; width: 20px; height: 20px; position: absolute; right: 20px; top: 15px; background-image: url('../img/search_black.png'); background-size: 100%; }
 .classify_nav { display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; background-color: #fff; box-shadow: 0 1px 1px rgba(51, 51, 51, .2); }
 .classify_nav a { font-size: 16rem; display: inline-block; width: 100%; line-height: 50px; text-align: center; }
+.classify_nav a.active { color: #d9bfad; -webkit-transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -ms-transition: all .25s ease-in-out; -o-transition: all .25s ease-in-out; transition: all .25s ease-in-out; }
 /*产品列表 end*/
 
+/*产品详情 start*/
+.product_details { margin-top: 55px }
+.product_details .swiper-container { margin-bottom: 0; }
+.product_details>p { margin: 0 5px; }
+.product_details .product_intro { margin: 0 5px; width: calc(100% - 30px); font-size: 12rem; }
+.product_details .product_intro p:first-child { margin-top: 0; }
+.product_details>img { width: calc(100% - 10px); margin: 0 5px; }
+.product_details p.intro_words { font-size: 12rem; text-indent: 24px; margin: 10px 5px; }
+/*产品详情 end*/
 
 
 
