--- a/css/index.css
+++ b/css/index.css
@@ -102,3 +102,21 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 .sum_price div { display: inline-block; height: 100%; width: 100%; text-align: center; line-height: 40px }
 .sum_price div:last-child { background-color: #dabfae; }
 /*购物车 end*/
+
+/*结算 start*/
+.address_view { margin-top: 50px; height: 40px; line-height: 40px; font-size: 12rem; position: relative; }
+.icon_position { display: inline-block; position: relative; top: 7px; width: 20px; height: 20px; background-image: url("../img/position.png"); background-size: 100% 100%; margin: 0 15px; }
+
+.payment .sum { float: left; width: 100px; }
+.payment .count { float: right; }
+.invoice { height: 40px; line-height: 40px; font-size: 12rem; border-top: 1px solid #999; border-bottom: 1px solid #999; }
+.invoice span:first-child { float: left; margin-left: 25px; }
+.invoice span:last-child { float: right; margin-right: 25px; }
+.invoice span:last-child a { display: block; width: 100%; height: 100%; }
+.sum_pay { display: -webkit-flex; /* Safari */ display: flex; justify-content: space-between; position: fixed; bottom: 50px; width: 100%; height: 50px; font-size: 14rem; background-color: #fafafa; }
+.sum_pay>div { width: 100%; text-align: left; line-height: 50px; padding: 0 30px; }
+.sum_pay>div:last-child { width: 40%; text-align: center; padding: 0 20px; background-color: #dabfae; }
+
+
+
+/*结算 end*/
