--- a/css/index.css
+++ b/css/index.css
@@ -58,7 +58,7 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 /*商城主页 end*/
 
 /*导航栏 start*/
-.nav_list { position: fixed; bottom: 0; width: 100%; height: 50px; display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; background-color: #fff; box-shadow: 0 -1px 1px rgba(51, 51, 51, .2); }
+.nav_list { position: fixed; bottom: 0; width: 100%; height: 50px; z-index: 99; display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; background-color: #fff; box-shadow: 0 -1px 1px rgba(51, 51, 51, .2); }
 .nav_list a { font-size: 18rem; display: inline-block; width: 100%; line-height: 50px; text-align: center; }
 .nav_list a.active { color: #d9bfad; -webkit-transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -ms-transition: all .25s ease-in-out; -o-transition: all .25s ease-in-out; transition: all .25s ease-in-out; }
 /*导航栏 end*/
