--- a/v1/css/index.css
+++ b/v1/css/index.css
@@ -2,7 +2,7 @@ body, html { width: 100%; height: 100%; margin: 0; padding: 0; overflow-x: hidde
 a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,0,0); text-decoration: none; color: #666; }
 
 /*首页 start*/
-.container { display: -webkit-flex; /* Safari */ display: flex; flex-direction: column;	/*justify-content: center;*/ align-items: center; height: calc(100% - 50px); background-image: url('../img/index-bg.jpg'); background-size: 100%; font-size: 16rem; padding-top: 50px; }
+.container { /* Safari */ display: -ms-flexbox; display: flex; -ms-flex-direction: column; flex-direction: column;	/*justify-content: center;*/ -ms-flex-align: center; align-items: center; height: calc(100% - 50px); background-image: url('../img/index-bg.jpg'); background-size: 100%; font-size: 16rem; padding-top: 50px; }
 .container img { width: 20%; }
 .index_intro { height: auto; width: 80%; text-align: center; font-size: 16rem; color: #fff; line-height: 26px; margin: 20px auto 50px; }
 .menu_body { width: 80%; padding: 10px; background-color: #c77f77; }
@@ -44,7 +44,7 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 .class_tools { background-image: url('../img/shop_list_03.jpg'); }
 
 /*产品介绍*/
-.product_list { display: -webkit-flex; /* Safari */ display: flex; flex-wrap: wrap; font-size: 0; margin-bottom: 60px; }
+.product_list { /* Safari */ display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; font-size: 0; margin-bottom: 60px; }
 .product { width: calc(50% - 10px); margin: 5px; display: inline-block; }
 .product>a { width: 100%; height: 100%; }
 .product img { width: 100%; }
@@ -58,16 +58,16 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 /*商城主页 end*/
 
 /*导航栏 start*/
-.nav_list { position: fixed; bottom: 0; width: 100%; height: 50px; z-index: 99; display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; background-color: #fff; box-shadow: 0 -1px 1px rgba(51, 51, 51, .2); }
+.nav_list { position: fixed; bottom: 0; width: 100%; height: 50px; z-index: 99; /* Safari */ display: -ms-flexbox; display: flex; -ms-flex-pack: distribute; justify-content: space-around; background-color: #fff; box-shadow: 0 -1px 1px rgba(51, 51, 51, .2); }
 .nav_list a { font-size: 18rem; display: inline-block; width: 100%; line-height: 50px; text-align: center; }
-.nav_list a.active { color: #d9bfad; -webkit-transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -ms-transition: all .25s ease-in-out; -o-transition: all .25s ease-in-out; transition: all .25s ease-in-out; }
+.nav_list a.active { color: #d9bfad; transition: all .25s ease-in-out; }
 /*导航栏 end*/
 
 /*产品列表 start*/
 .nav_search { display: block; width: 20px; height: 20px; position: absolute; right: 20px; top: 15px; background-image: url('../img/search_black.png'); background-size: 100%; }
-.classify_nav { display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; background-color: #fff; box-shadow: 0 1px 1px rgba(51, 51, 51, .2); }
+.classify_nav { /* Safari */ display: -ms-flexbox; display: flex; -ms-flex-pack: distribute; justify-content: space-around; background-color: #fff; box-shadow: 0 1px 1px rgba(51, 51, 51, .2); }
 .classify_nav a { font-size: 16rem; display: inline-block; width: 100%; line-height: 50px; text-align: center; }
-.classify_nav a.active { color: #d9bfad; -webkit-transition: all .25s ease-in-out; -moz-transition: all .25s ease-in-out; -ms-transition: all .25s ease-in-out; -o-transition: all .25s ease-in-out; transition: all .25s ease-in-out; }
+.classify_nav a.active { color: #d9bfad; transition: all .25s ease-in-out; }
 /*产品列表 end*/
 
 /*产品详情 start*/
@@ -83,7 +83,7 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 /*购物车 start*/
 .nav .delete { position: absolute; right: 15px; font-size: 14rem; color: #000; padding: 0 5px; }
 .shopping_cart { margin-top: 55px; }
-.cart_item { margin: 5px; position: relative; display: -webkit-flex; /* Safari */ display: flex; }
+.cart_item { margin: 5px; position: relative; /* Safari */ display: -ms-flexbox; display: flex; }
 .cart_item a.selection { display: block; width: 20px; height: 20px; top: calc(50% - 10px); left: 10px; position: absolute; background-size: 100%; background-image: url('../img/unselected.png'); }
 .cart_item a.selection.selected { background-image: url('../img/selected.png'); }
 .cart_item img { width: 130px; height:120px; }
@@ -96,7 +96,7 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 .cart_item .sub,.cart_item .num,.cart_item .add { display:inline-block; width: 12px; padding: 3px; text-align: center }
 .cart_item .add { background-color: #dabfae; margin-left: 5px; height: 12px; }
 .cart_item .sub { font-size: 12rem; }
-.sum_price { display: -webkit-flex; /* Safari */ display: flex; justify-content: space-around; position: fixed; bottom: 50px; width: 100%; height: 40px; font-size: 14rem; background-color: #fafafa; }
+.sum_price { /* Safari */ display: -ms-flexbox; display: flex; -ms-flex-pack: distribute; justify-content: space-around; position: fixed; bottom: 50px; width: 100%; height: 40px; font-size: 14rem; background-color: #fafafa; }
 .sum_price a.selection { display: block; width: 20px; height: 20px; top: calc(50% - 10px); left: 15px; position: absolute; background-size: 100%; background-image: url('../img/unselected.png'); }
 .sum_price a.selection.selected { background-image: url('../img/selected.png'); }
 .sum_price div { display: inline-block; height: 100%; width: 100%; text-align: center; line-height: 40px }
@@ -113,7 +113,7 @@ a, a:hover, a:active, a:focus, a:visited { -webkit-tap-highlight-color:rgba(0,0,
 .invoice span:first-child { float: left; margin-left: 25px; }
 .invoice span:last-child { float: right; margin-right: 25px; }
 .invoice span:last-child a { display: block; width: 100%; height: 100%; }
-.sum_pay { display: -webkit-flex; /* Safari */ display: flex; justify-content: space-between; position: fixed; bottom: 50px; width: 100%; height: 50px; font-size: 14rem; background-color: #fafafa; }
+.sum_pay { /* Safari */ display: -ms-flexbox; display: flex; -ms-flex-pack: justify; justify-content: space-between; position: fixed; bottom: 50px; width: 100%; height: 50px; font-size: 14rem; background-color: #fafafa; }
 .sum_pay>div { width: 100%; text-align: left; line-height: 50px; padding: 0 30px; }
 .sum_pay>div:last-child { width: 40%; text-align: center; padding: 0 20px; background-color: #dabfae; }
 
