--- a/v2/css/index.css
+++ b/v2/css/index.css
@@ -215,6 +215,8 @@ a.selection.selected{background-image:url("data:image/png;base64,iVBORw0KGgoAAAA
 .member_right p { font-size: 16rem; margin: 0; padding-top: 10px; text-align: center; color: #666; }
 .member_center> div> a { position: relative; display: block; width: 100%; }
 .member_center> div> a span { position: absolute; right: 0; }
+.member_center .upgrade_member { height: 30px; line-height: 30px; }
+.member_center .upgrade_member a { display: block; width: 40%; color: #fff; background-color: #8A7D85; border-radius: 5px; text-align: center; margin: 40px auto 0; }
 /*会员中心 End*/
 /*搜索 Start*/
 .search { position: relative; height: calc(100% - 100px); margin: 50px 0; }
